<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_text">Don\'t have an account? Sign up!</string>
    <string name="signup_button_text">SIGN UP!</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_hint">email@example.com</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="action_logout">Logout</string>
    <string name="empty_inbox_label">No New Messages</string>
    <string name="empty_friends_label">No Friends</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="general_error_title">We\'re Sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error_toast">Sorry there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was an problem with the file.</string>
    <string name="error_file_too_large">The selected file is too Large! Select a new file.</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list">Choose some friends first!</string>
    <string name="action_send">Send</string>
    <string name="send_button_label">Send</string>
    <string name="file_error_text">There was an error with the file selected. Please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="content_desc_button_divider">button divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User Checkmark</string>
    <string name="push_message">"You have a new Ribbit message from %s"</string>
</resources>
