<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="seth_k.app.ribbit.ui.SignupActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/user_pw_box"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"/>

        <EditText
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/AuthEditText"/>

        <EditText
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_pw_box"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/signup_button"
        style="@style/AuthButton"
        android:text="@string/signup_button_text"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_pw_box"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"/>
    <Button
        android:id="@+id/cancel_button"
        style="@style/AuthButton"
        android:layout_below="@+id/user_pw_box"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        android:text="@string/cancel_button_text"/>


</RelativeLayout>
