<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/AuthBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="seth_k.app.ribbit.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/user_pw_box"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_label"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_pw_box" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/signup_text"
        android:textColor="@android:color/white"/>

</RelativeLayout>
